# bankline-direct-parser

./: .travis.yml  README.rst  setup.cfg  setup.py  tox.ini
bankline_parser/: __init__.py
bankline_parser/data_services/: __init__.py  enums.py  fields.py  models.py  parser.py  utils.py
tests/: test_fields.py  test_models.py  test_parser.py  testfile_rbs
tests/data/: testfile_nwb  testfile_rbs
