[metadata]
name = bankline-direct-parser
version = attr: bankline_parser.__version__
url = https://github.com/ministryofjustice/bankline-direct-parser
author = Ministry of Justice Digital & Technology
author_email = dev@digital.justice.gov.uk
description = Parser for Bankline Direct banking information services
long_description = file: README.rst
license = MIT
keywords =
    bankline
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Software Development :: Libraries :: Python Modules

[options]
; NB: looser python version requirement than what's tested
python_requires = >=3.6
packages =
    bankline_parser
    bankline_parser.data_services
include_package_data = true

[flake8]
exclude = .git/,.eggs/,.tox/,build/,dist/,env/,venv/
max-complexity = 10
max-line-length = 120

[coverage:run]
omit =
    setup.py
    */tests/*
    .eggs/*
    .tox/*
